# dbx-dab-lab

./: .coverage.mac.lan.22287.XFefBYjx  .coveragerc  README.md  databricks.yml  pyproject.toml  requirements-dbc.txt  requirements-pyspark.txt  setup.py
.github/workflows/: cd-workflow.yml  ci-workflow.yml  main.yml
citibike_etl/dlt/01_bronze/: 01_bronze_citibike.ipynb
citibike_etl/dlt/02_silver/: 02_silver_citibike.ipynb
citibike_etl/dlt/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
citibike_etl/notebooks/01_bronze/: 01_bronze_citibike.ipynb
citibike_etl/notebooks/02_silver/: 02_silver_citibike.ipynb
citibike_etl/notebooks/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
citibike_etl/scripts/01_bronze/: 01_bronze_citibike.py
citibike_etl/scripts/02_silver/: 02_silver_citibike.py
citibike_etl/scripts/03_gold/: 03_gold_citibike_daily_ride_summary.py  03_gold_citibike_daily_station_performance.py
resources/: citibike_etl_pipeline.dlt.yml  citibike_etl_pipeline_nb.job.yml  citibike_etl_pipeline_py.job.yml  clusters.yml
src/citibike/: citibike_utils.py
src/dbx_dab_labs/: main.py
src/utils/: datetime_utils.py
tests/: conftest.py  test_citibike_utils.py  test_datetime_utils.py
