[project]
name = "dbx_dab_labs_project"
version = "0.0.1"
authors = [{ name = "rafeed.sultaan@tlconsulting.com.au" }]
requires-python = ">=3.10,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/dbx_dab_labs_project",
    "src/citibike",
    "src/utils"
]

[tool.ruff]
line-length = 120
